--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-  demands: AZP_POOL -equals GKE-AsiaEast1-Pool
+  demands: azp_pool -equals GKE-AsiaEast1-Pool
 strategy:
   matrix:
     Python27:
