Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,8 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-  demands: azp_pool -equals GKE-AsiaEast1-Pool
+  demands: 
+  - python3
 strategy:
   matrix:
     Python27:
