Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ pool:
   demands: 
   - python3
   - azp_pool -equals GKE-AsiaEast1-Pool
+  - agent.version -equals 2.184.2
 strategy:
   matrix:
     Python27:
