--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,7 @@ pool:
   vmImage: ubuntu-latest
   demands: 
   - python3
-  - azp_pool -equals GKE-AsiaEast1-Pool
-  - agent.version -equals 2.184.2
+  - agent.name -equals ado-agent-devops-agent-587c6c5684-9bkdg
 strategy:
   matrix:
     Python27:
