--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,13 +19,8 @@ strategy:
       python.version: '3.7'
 
 steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
-
 - script: |
-    python -m pip install --upgrade pip
+    python3 -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
 
