--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,19 +7,11 @@ trigger:
 - master
 
 pool: GKE-AsiaEast1-Pool
-strategy:
-  matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
 
 steps:
 - script: |
+    apt update -y
+    apt install -y python3-pip
     python3 -m pip install --upgrade pip
     pip install -r requirements.txt
   displayName: 'Install dependencies'
