--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,9 @@ stages:
   displayName: Just a test stages
   jobs:
   - job: runs_in_container
-    container: ubuntu:16.04
+    container: ubuntu:18.04
     steps: 
-    - bash: echo "Hello World"
+    - script: ls -l 
     
 #steps:
 #- script: |
