--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,21 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-18.04'
+resources:
+  containers:
+  - container: my_container
+    image: buildpack-deps:focal
+  - container: nginx
+    image: nginx:latest
+  - container: ubuntu1804
+    image: ubuntu:18.04
 
-container: ubuntu:18.04
 
+pool: 
+  GKE-AsiaEast1-Pool
+container: ubuntu1804
 steps:
 - script: printenv
-
 
   
 #steps:
